Trying the automatic on click method and reverting server.js to original form

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 	<title>Logon SAC</title>
 
 </head>
-</body>
+<body>
+
+	<script>
+		document.getElementById("button1").click();
+	</script>
+</body>	
 
 </html>
 
 
 <html>
 <h3>SAP Analytics Cloud Custom App Integration</h3>
-<a href="/authorizationcode">Log In to SAP Analytics Cloud</a>
+<a id="button1" href="/authorizationcode">Log In to SAP Analytics Cloud</a>
 
 </html>
