Changing html to look like loading screen

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 
 <html>
-<h3>SAP Analytics Cloud Custom App Integration</h3>
-<a id="button1" href="/authorizationcode">Log In to SAP Analytics Cloud</a>
+<!-- <h3>SAP Analytics Cloud Custom App Integration</h3> -->
+<a id="button1" href="/authorizationcode">Loading SAP NS2 Analytics Cloud Demo...</a>
 
 </html>
 <script>
